--- a/style.css
+++ b/style.css
@@ -10,6 +10,48 @@
     background-color: #1F2937;
 }
 
+#top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #1F2937;
+    padding: 20px;
+    gap: 20px;
+    
+}
+
+.top-content {
+    flex: 1;
+    margin: 40px;
+}
+
+.top-content .main-text {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 800;
+    margin: 0px;
+
+}
+
+.top-content .secondary-text {
+    font-size: 18px;
+    color: #F9FAF8;
+    margin: 0px;
+}
+
+button {
+    padding: 3px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 5px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.top-image {
+    flex: 1;
+}
 .header-links {
     display: flex;
     list-style-type: none;
