--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-family: Arial, sans-serif;
 }
 
@@ -47,10 +47,20 @@ button {
     background-color: #3882F6;
     color: #F9FAF8;
     font-weight: bold;
+    border: none;
+    outline: none;
+    box-shadow: none;
 }
 
 .top-image {
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    color: #F9FAF8;
+    background-color: grey;
+    
 }
 .header-links {
     display: flex;
