--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: Arial, sans-serif;
 }
 
+/* Header Section CSS */
 #header {
     display: flex;
     align-items: center;
@@ -10,6 +11,28 @@
     background-color: #1F2937;
 }
 
+.header-links {
+    display: flex;
+    list-style-type: none;
+    padding: 0px;
+    gap: 16px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+li {
+    display: inline-block;
+}
+
+.header-logo {
+    display: inline-block;
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bold;
+
+}
+
+/* Top Section CSS */
 #top {
     display: flex;
     align-items: center;
@@ -62,23 +85,36 @@ button {
     background-color: grey;
     
 }
-.header-links {
+
+/* Information Section CSS */
+.info-header {
+    text-align: center;
+    font-weight: 800;
+}
+
+.info-blocks {
     display: flex;
-    list-style-type: none;
-    padding: 0px;
-    gap: 16px;
-    color: #E5E7EB;
-    font-size: 18px;
+    gap: 30px;
+    justify-content: center;
 }
 
-li {
-    display: inline-block;
+.info-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.header-logo {
-    display: inline-block;
-    color: #F9FAF8;
-    font-size: 24px;
-    font-weight: bold;
-
+.info-image {
+    width: 150px;
+    height: 150px;
+    border: 2px solid blue;
+    border-radius: 10px;
 }
+
+.block-text {
+    width: 150px;
+}
+
+
